layout issue

--- a/src/editor.css
+++ b/src/editor.css
@@ -4,7 +4,7 @@
   height: 100%;
 }
 
-.toolbar {
+.editor-toolbar {
   flex: 0 1 auto;
 }
 
